@@ -1,9 +1,9 @@
 /* -*- c-file-style: "ruby"; indent-tabs-mode: nil -*- */
-/* $Id: rbgnome-icon-entry.c,v 1.6 2003/02/02 12:51:06 tkubo Exp $ */
+/* $Id: rbgnome-icon-entry.c,v 1.7 2005/09/25 17:53:07 mutoh Exp $ */
 /* based on libgnomeui/gnome-icon-entry.h */
 
 /* Gnome::IconEntry widget for Ruby/GNOME2
- * Copyright (C) 2002-2003 Ruby-GNOME2 Project Team
+ * Copyright (C) 2002-2005 Ruby-GNOME2 Project Team
  * Copyright (C) 2002      KUBO Takehiro <kubo@jiubao.org>
  * Copyright (C) 2001      Neil Conway <neilconway@rogers.com>
  *
@@ -25,6 +25,35 @@
 #include "rbgnome.h"
 
 #define _SELF(self) GNOME_ICON_ENTRY(RVAL2GOBJ(self))
+
+/* Don't need this.
+void        gnome_icon_entry_construct      (GnomeIconEntry *ientry,
+                                             const gchar *history_id,
+                                             const gchar *browse_dialog_title);
+*/
+
+/* Defined as properties.
+void        gnome_icon_entry_set_pixmap_subdir
+                                            (GnomeIconEntry *ientry,
+                                             const gchar *subdir);
+gchar*      gnome_icon_entry_get_filename   (GnomeIconEntry *ientry);
+gboolean    gnome_icon_entry_set_filename   (GnomeIconEntry *ientry,
+                                             const gchar *filename);
+void        gnome_icon_entry_set_browse_dialog_title
+                                            (GnomeIconEntry *ientry,
+                                             const gchar *browse_dialog_title);
+void        gnome_icon_entry_set_history_id (GnomeIconEntry *ientry,
+                                             const gchar *history_id);
+GtkWidget*  gnome_icon_entry_pick_dialog    (GnomeIconEntry *ientry);
+*/
+/* Deprecated.
+void        gnome_icon_entry_set_icon       (GnomeIconEntry *ientry,
+                                             const gchar *filename);
+GtkWidget*  gnome_icon_entry_gnome_file_entry
+                                            (GnomeIconEntry *ientry);
+GtkWidget*  gnome_icon_entry_gnome_entry    (GnomeIconEntry *ientry);
+GtkWidget*  gnome_icon_entry_gtk_entry      (GnomeIconEntry *ientry);
+*/
 
 static VALUE
 ientry_initialize(self, history_id, browse_dialog_title)
