@@ -1,9 +1,9 @@
 /* -*- c-file-style: "ruby"; indent-tabs-mode: nil -*- */
-/* $Id: rbgnome-stock-icons.c,v 1.3 2003/02/02 12:51:06 tkubo Exp $ */
+/* $Id: rbgnome-stock-icons.c,v 1.4 2005/09/25 17:53:07 mutoh Exp $ */
 /* based on libgnomeui/gnome-stock-icons.h */
 
 /* Gnome::Scores widget for Ruby/GNOME2
- * Copyright (C) 2002-2003 Ruby-GNOME2 Project Team
+ * Copyright (C) 2002-2005 Ruby-GNOME2 Project Team
  * Copyright (C) 2002      KUBO Takehiro <kubo@jiubao.org>
  *
  * This library is free software; you can redistribute it and/or
@@ -69,4 +69,155 @@ Init_gnome_stock_icons(mGnome)
     rb_define_const(mStock, "TEXT_UNINDENT", CSTR2SYM(GNOME_STOCK_TEXT_UNINDENT));
     rb_define_const(mStock, "TEXT_BULLETED_LIST", CSTR2SYM(GNOME_STOCK_TEXT_BULLETED_LIST));
     rb_define_const(mStock, "TEXT_NUMBERED_LIST", CSTR2SYM(GNOME_STOCK_TEXT_NUMBERED_LIST));
+
+/* Deprecated.
+#define     GNOME_STOCK_PIXMAP_NEW
+#define     GNOME_STOCK_PIXMAP_OPEN
+#define     GNOME_STOCK_PIXMAP_CLOSE
+#define     GNOME_STOCK_PIXMAP_REVERT
+#define     GNOME_STOCK_PIXMAP_SAVE
+#define     GNOME_STOCK_PIXMAP_SAVE_AS
+#define     GNOME_STOCK_PIXMAP_CUT
+#define     GNOME_STOCK_PIXMAP_COPY
+#define     GNOME_STOCK_PIXMAP_PASTE
+#define     GNOME_STOCK_PIXMAP_CLEAR
+#define     GNOME_STOCK_PIXMAP_PROPERTIES
+#define     GNOME_STOCK_PIXMAP_PREFERENCES
+#define     GNOME_STOCK_PIXMAP_HELP
+#define     GNOME_STOCK_PIXMAP_SCORES
+#define     GNOME_STOCK_PIXMAP_PRINT
+#define     GNOME_STOCK_PIXMAP_SEARCH
+#define     GNOME_STOCK_PIXMAP_SRCHRPL
+#define     GNOME_STOCK_PIXMAP_BACK
+#define     GNOME_STOCK_PIXMAP_FORWARD
+#define     GNOME_STOCK_PIXMAP_FIRST
+#define     GNOME_STOCK_PIXMAP_LAST
+#define     GNOME_STOCK_PIXMAP_HOME
+#define     GNOME_STOCK_PIXMAP_STOP
+#define     GNOME_STOCK_PIXMAP_REFRESH
+#define     GNOME_STOCK_PIXMAP_UNDO
+#define     GNOME_STOCK_PIXMAP_REDO
+#define     GNOME_STOCK_PIXMAP_TIMER
+#define     GNOME_STOCK_PIXMAP_TIMER_STOP
+#define     GNOME_STOCK_PIXMAP_MAIL
+#define     GNOME_STOCK_PIXMAP_MAIL_RCV
+#define     GNOME_STOCK_PIXMAP_MAIL_SND
+#define     GNOME_STOCK_PIXMAP_MAIL_RPL
+#define     GNOME_STOCK_PIXMAP_MAIL_FWD
+#define     GNOME_STOCK_PIXMAP_MAIL_NEW
+#define     GNOME_STOCK_PIXMAP_TRASH
+#define     GNOME_STOCK_PIXMAP_TRASH_FULL
+#define     GNOME_STOCK_PIXMAP_UNDELETE
+#define     GNOME_STOCK_PIXMAP_SPELLCHECK
+#define     GNOME_STOCK_PIXMAP_MIC
+#define     GNOME_STOCK_PIXMAP_LINE_IN
+#define     GNOME_STOCK_PIXMAP_CDROM
+#define     GNOME_STOCK_PIXMAP_VOLUME
+#define     GNOME_STOCK_PIXMAP_MIDI
+#define     GNOME_STOCK_PIXMAP_BOOK_RED
+#define     GNOME_STOCK_PIXMAP_BOOK_GREEN
+#define     GNOME_STOCK_PIXMAP_BOOK_BLUE
+#define     GNOME_STOCK_PIXMAP_BOOK_YELLOW
+#define     GNOME_STOCK_PIXMAP_BOOK_OPEN
+#define     GNOME_STOCK_PIXMAP_ABOUT
+#define     GNOME_STOCK_PIXMAP_QUIT
+#define     GNOME_STOCK_PIXMAP_MULTIPLE
+#define     GNOME_STOCK_PIXMAP_NOT
+#define     GNOME_STOCK_PIXMAP_CONVERT
+#define     GNOME_STOCK_PIXMAP_JUMP_TO
+#define     GNOME_STOCK_PIXMAP_UP
+#define     GNOME_STOCK_PIXMAP_DOWN
+#define     GNOME_STOCK_PIXMAP_TOP
+#define     GNOME_STOCK_PIXMAP_BOTTOM
+#define     GNOME_STOCK_PIXMAP_ATTACH
+#define     GNOME_STOCK_PIXMAP_INDEX
+#define     GNOME_STOCK_PIXMAP_FONT
+#define     GNOME_STOCK_PIXMAP_EXEC
+#define     GNOME_STOCK_PIXMAP_ALIGN_LEFT
+#define     GNOME_STOCK_PIXMAP_ALIGN_RIGHT
+#define     GNOME_STOCK_PIXMAP_ALIGN_CENTER
+#define     GNOME_STOCK_PIXMAP_ALIGN_JUSTIFY
+#define     GNOME_STOCK_PIXMAP_TEXT_BOLD
+#define     GNOME_STOCK_PIXMAP_TEXT_ITALIC
+#define     GNOME_STOCK_PIXMAP_TEXT_UNDERLINE
+#define     GNOME_STOCK_PIXMAP_TEXT_STRIKEOUT
+#define     GNOME_STOCK_PIXMAP_TEXT_INDENT
+#define     GNOME_STOCK_PIXMAP_TEXT_UNINDENT
+#define     GNOME_STOCK_PIXMAP_EXIT
+#define     GNOME_STOCK_PIXMAP_COLORSELECTOR
+#define     GNOME_STOCK_PIXMAP_ADD
+#define     GNOME_STOCK_PIXMAP_REMOVE
+#define     GNOME_STOCK_PIXMAP_TABLE_BORDERS
+#define     GNOME_STOCK_PIXMAP_TABLE_FILL
+#define     GNOME_STOCK_PIXMAP_TEXT_BULLETED_LIST
+#define     GNOME_STOCK_PIXMAP_TEXT_NUMBERED_LIST
+#define     GNOME_STOCK_MENU_BLANK
+#define     GNOME_STOCK_MENU_NEW
+#define     GNOME_STOCK_MENU_SAVE
+#define     GNOME_STOCK_MENU_SAVE_AS
+#define     GNOME_STOCK_MENU_REVERT
+#define     GNOME_STOCK_MENU_OPEN
+#define     GNOME_STOCK_MENU_CLOSE
+#define     GNOME_STOCK_MENU_QUIT
+#define     GNOME_STOCK_MENU_CUT
+#define     GNOME_STOCK_MENU_COPY
+#define     GNOME_STOCK_MENU_PASTE
+#define     GNOME_STOCK_MENU_PROP
+#define     GNOME_STOCK_MENU_PREF
+#define     GNOME_STOCK_MENU_ABOUT
+#define     GNOME_STOCK_MENU_SCORES
+#define     GNOME_STOCK_MENU_UNDO
+#define     GNOME_STOCK_MENU_REDO
+#define     GNOME_STOCK_MENU_PRINT
+#define     GNOME_STOCK_MENU_SEARCH
+#define     GNOME_STOCK_MENU_SRCHRPL
+#define     GNOME_STOCK_MENU_BACK
+#define     GNOME_STOCK_MENU_FORWARD
+#define     GNOME_STOCK_MENU_FIRST
+#define     GNOME_STOCK_MENU_LAST
+#define     GNOME_STOCK_MENU_HOME
+#define     GNOME_STOCK_MENU_STOP
+#define     GNOME_STOCK_MENU_REFRESH
+#define     GNOME_STOCK_MENU_MAIL
+#define     GNOME_STOCK_MENU_MAIL_RCV
+#define     GNOME_STOCK_MENU_MAIL_SND
+#define     GNOME_STOCK_MENU_MAIL_RPL
+#define     GNOME_STOCK_MENU_MAIL_FWD
+#define     GNOME_STOCK_MENU_MAIL_NEW
+#define     GNOME_STOCK_MENU_TRASH
+#define     GNOME_STOCK_MENU_TRASH_FULL
+#define     GNOME_STOCK_MENU_UNDELETE
+#define     GNOME_STOCK_MENU_TIMER
+#define     GNOME_STOCK_MENU_TIMER_STOP
+#define     GNOME_STOCK_MENU_SPELLCHECK
+#define     GNOME_STOCK_MENU_MIC
+#define     GNOME_STOCK_MENU_LINE_IN
+#define     GNOME_STOCK_MENU_CDROM
+#define     GNOME_STOCK_MENU_VOLUME
+#define     GNOME_STOCK_MENU_MIDI
+#define     GNOME_STOCK_MENU_BOOK_RED
+#define     GNOME_STOCK_MENU_BOOK_GREEN
+#define     GNOME_STOCK_MENU_BOOK_BLUE
+#define     GNOME_STOCK_MENU_BOOK_YELLOW
+#define     GNOME_STOCK_MENU_BOOK_OPEN
+#define     GNOME_STOCK_MENU_CONVERT
+#define     GNOME_STOCK_MENU_JUMP_TO
+#define     GNOME_STOCK_MENU_UP
+#define     GNOME_STOCK_MENU_DOWN
+#define     GNOME_STOCK_MENU_TOP
+#define     GNOME_STOCK_MENU_BOTTOM
+#define     GNOME_STOCK_MENU_ATTACH
+#define     GNOME_STOCK_MENU_INDEX
+#define     GNOME_STOCK_MENU_FONT
+#define     GNOME_STOCK_MENU_EXEC
+#define     GNOME_STOCK_MENU_ALIGN_LEFT
+#define     GNOME_STOCK_MENU_ALIGN_RIGHT
+#define     GNOME_STOCK_MENU_ALIGN_CENTER
+#define     GNOME_STOCK_MENU_ALIGN_JUSTIFY
+#define     GNOME_STOCK_MENU_TEXT_BOLD
+#define     GNOME_STOCK_MENU_TEXT_ITALIC
+#define     GNOME_STOCK_MENU_TEXT_UNDERLINE
+#define     GNOME_STOCK_MENU_TEXT_STRIKEOUT
+#define     GNOME_STOCK_MENU_EXIT
+*/
 }
